src/test/ui/error-codes/E0283.stderr
error[E0283]: type annotations needed
  --> $DIR/E0283.rs:18:21
   |
LL |     fn create() -> u32;
   |     ------------------- required by `Generator::create`
...
LL |     let cont: u32 = Generator::create();
   |                     ^^^^^^^^^^^^^^^^^ cannot infer type
   |
   = note: cannot resolve `_: Generator`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
